export const snapshot = {};

snapshot[`Notification Archive Command - Help Text 1`] = `
stdout:
"
Usage: archive <notificationId>

Description:

  Archive a notification

Options:

  -h, --help                 - Show this help.                                 
  -j, --json                 - Output as JSON                                  
  --timeout-ms  <timeoutMs>  - Timeout for write confirmation in milliseconds  

"
stderr:
""
`;

snapshot[`Notification Archive Command - Archives Notification 1`] = `
stdout:
"✓ Archived notification: notif-1
"
stderr:
""
`;

snapshot[`Notification Archive Command - JSON Output 1`] = `
stdout:
'{
  "id": "notif-1",
  "title": "ENG-123 was assigned to you",
  "archivedAt": "2026-03-13T07:05:00Z",
  "readAt": "2026-03-13T07:00:00Z",
  "noOp": false,
  "receipt": {
    "operationId": "notification.archive",
    "resource": "notification",
    "action": "archive",
    "resolvedRefs": {
      "notificationId": "notif-1"
    },
    "appliedChanges": [
      "archivedAt"
    ],
    "noOp": false,
    "partialSuccess": false,
    "nextSafeAction": "continue"
  }
}
'
stderr:
""
`;

snapshot[`Notification Archive Command - Already Archived 1`] = `
stdout:
'{
  "id": "notif-1",
  "title": "ENG-123 was assigned to you",
  "archivedAt": "2026-03-13T07:05:00Z",
  "readAt": "2026-03-13T07:00:00Z",
  "noOp": true,
  "receipt": {
    "operationId": "notification.archive",
    "resource": "notification",
    "action": "archive",
    "resolvedRefs": {
      "notificationId": "notif-1"
    },
    "appliedChanges": [],
    "noOp": true,
    "partialSuccess": false,
    "nextSafeAction": "continue"
  }
}
'
stderr:
""
`;
